# agent-sdk

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
api/: README.md  __init__.py  agent_manager.py  container.py  dependencies.py  main.py  models.py  requirements.txt  routes.py  routes.py.bak
api/chat/: vite.config.ts
api/core/: __init__.py  correlation.py  exceptions.py  logging.py  middleware.py
api/models/: __init__.py  collections.py  data_model_design.md  data_model_design_v2.md  documents.py  documents_v2.py  enums.py  relationship.md  schemas.py  tokens.py
api/routers/: __init__.py  agents.py  health.py  query.py  sessions.py
api/services/: __init__.py  agent_manager.py  callback.py  cancellable_tasks.py  config_store.py  database.py  llm_service.py  repositories.py  task_manager.py  timer_service.py
api/utils/: __init__.py  datetime.py
api/utils/apollo_config/: README.md  __init__.py  loader.py  pyproject.toml
bu_agent_sdk/: config.py  schemas.py
bu_agent_sdk/agent/: actionbook_executor.py  flow_matcher.py  knowledge_retriever.py  system_actions.py  workflow_agent.py  workflow_agent_v2.py  workflow_state.py
bu_agent_sdk/examples/: config_driven_agent.py  intent_router.py  mcp_integration.py
bu_agent_sdk/llm/: __init__.py  base.py  debug.py
config/: apollo_config.py  http_config.py
docs/: ARCHITECTURE.md  CHANGELOG-v9.1.md  CHANGELOG-v9.2.md  api-config-parsing.md  api-optimization-summary.md  api-testing-fix-summary.md  api-testing-summary.md  config-parsing-optimization-summary.md  configuration-guide.md  final-optimization-summary.md  saas-agent-best-practices.md  task-specific-models-implementation.md  task-specific-models-quickstart.md  task-specific-models.md  uv-migration-guide.md  uv-migration-summary.md  v8.md  workflow-agent-deployment.md  workflow-agent-implementation.md  workflow-agent-v9.md  workflow-dynamic-optimization.md  workflow-executor-optimization-summary.md  workflow-tool-strategy-analysis.md  workflow-visibility-design-analysis.md
examples/: api_client_demo.py  config_usage_demo.py  task_specific_models_demo.py  workflow_demo.py  workflow_dynamic_config_example.py  workflow_optimized_example.py
tests/: test_api.py  test_api_optimized.py  test_config_enhancer.py  test_intent_matcher.py  test_query_api.py  test_query_api_unit.py  test_query_flow.py  test_services.py  test_session_management.py  test_timer_service.py  test_v2_full_flow.py  test_v2_query_api.py  test_v2_services.py  test_workflow_agent.py  test_workflow_agent_v2.py  test_workflow_engine.py  test_workflow_executors.py  test_workflow_storage.py
(+63 files in other folders)
